This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
7/7/17: Fix fitting of View mode montage to polygon and drawing of Trial/Focus
areas on View image to take account of high defocus mag calibration (In 3.6).

7/5/17: In Navigator Acquire at Items, added options for doing a subset of
items, skipping stage move if possible, and skipping stage move in Z.  There
is also a script command to enable skipping the stage move.


7/4/17: Fixed tilt series variations dialog to constrain exposure time series
to multiple of frame time for Falcon and DE cameras (In 3.6).

7/4/17: Added to mdoc file the dose per frame when frames saved, and
prior cumulative dose in Record area for tilt series images.

7/3/17: Added special option to normalize all lenses when changing mag within
LM or on all mag changes; when changing between LM and nonLM, it now does
objective normalization too and uses one normalize call on FEI scopes.

6/25/17: Fixed output of a pcm file for other Records when aligning whole tilt
series in IMOD, and two other issues when frame-saving is automatically
imposed with aligning in IMOD (In 3.6).

6/24/17: Added script command to set frame rate of DE camera.

6/24/17: Preliminary support for new FEI camera interface and Falcon 3 added.

6/15/17: Added property to set the maximum beam radius allowed when centering
beam with low dose tracking images in tilt series (In 3.6).

6/14/17: Fixed setting of drift settling for Eagle through plugin/server
(In 3.6).

6/9/17: SEM_3-6-9
6/2/17: Fixed use of K2 asynchronous readout to RAM when frame alignment is
selected (In 3.6).

5/25/17: Fixed reporting of frames saved and writing to frame mdoc when frame
saving is turned on for aligning in IMOD (In 3.6).

5/25/17: Made it restore the correct focus when autofocus is aborted after