@@ -114,6 +114,7 @@ BOOL_SETT_GETSET("RotAlignDoSearch", mWinApp->mNavHelper->, SearchRotAlign)
 FLOAT_SETT_GETSET("RotAlignRange", mWinApp->mNavHelper->, RotAlignRange)
 FLOAT_SETT_GETSET("GridGroupSize", mWinApp->mNavHelper->, GridGroupSize)
 BOOL_SETT_GETSET("DivideGridIntoGroups", mWinApp->mNavHelper->, DivideIntoGroups)
+BOOL_SETT_GETSET("RIuseCurrentLDparams", mWinApp->mNavHelper->, RIuseCurrentLDparams)
 INT_SETT_GETSET("CameraDivide16BitBy2", camera->, DivideBy2)
 BOOL_SETT_GETSET("InterpolateDarkRefs", camera->, InterpDarkRefs)
 BOOL_SETT_GETSET("NoNormOfDSDoseFrac", camera->, NoNormOfDSdoseFrac)
