@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+7/8/17: Add Navigator option to all current Low Dose parameters to be used
+instead of the map parameters for Realign to Item.
+
 7/7/17: Fix fitting of View mode montage to polygon and drawing of Trial/Focus
 areas on View image to take account of high defocus mag calibration (In 3.6).
 
